crates/sdk/tests/macros/error_private_event.stderr
error: (calimero)> this event must be public
 --> tests/macros/error_private_event.rs:6:6
  |
6 | enum PrivateEvent {
  |      ^^^^^^^^^^^^
